--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,14 @@
 
   <!--our angular app-->
   <script src="services/users/users.js"></script>
+  <!--add pokemon service-->
+  <script src="services/pokemon/pokemon.js"></script>
+
   <script src="components/users/users.js"></script>
+  <!--add profile component-->
+  <script src="components/profile/profile.js"></script>
+  <script src="components/missingno/missingno.js"></script>
+
   <script src="app.js"></script>
 </head>
 
